buildscript {
    repositories {
        gradlePluginPortal()
        mavenCentral()
    }

    dependencies {
        classpath 'com.palantir.gradle.externalpublish:gradle-external-publish-plugin:1.2.1'
        classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.2.0'
        classpath 'com.palantir.gradle.consistentversions:gradle-consistent-versions:2.0.0'
        classpath 'com.gradle.publish:plugin-publish-plugin:0.15.0'
        classpath 'com.palantir.baseline:gradle-baseline-java:4.13.0'
        classpath 'de.undercouch:gradle-download-task:4.1.2'
        classpath 'com.palantir.gradle.gitversion:gradle-git-version:0.12.3'
        classpath 'gradle.plugin.org.inferred:gradle-processors:3.3.0'
        classpath 'com.palantir.gradle.revapi:gradle-revapi:1.5.0'
    }
}

apply plugin: 'com.palantir.external-publish'
apply plugin: 'com.palantir.baseline'
apply plugin: 'com.palantir.git-version'
apply plugin: 'com.palantir.consistent-versions'

allprojects {
    apply plugin: 'com.palantir.java-format'
    version System.env.CIRCLE_TAG ?: gitVersion()
    group 'com.palantir.sls-packaging'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'
    java {
        sourceCompatibility JavaVersion.VERSION_11
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ['-Werror', '-Xlint:deprecation']
    }
}
